--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notificações do Webhook</title>
-    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+    <title>WebSocket Example</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
 </head>
 <body>
-<h2>Notificações Recebidas</h2>
-<ul id="notifications"></ul>
+<h1>Contatos Criados</h1>
+
+<h2>JSON Recebido:</h2>
+<pre id="json-display"></pre>
 
 <script>
-    const socket = new SockJS("http://localhost:8090/ws");
+    const socket = new SockJS('/ws');
     const stompClient = Stomp.over(socket);
 
-    stompClient.connect({}, function () {
-        stompClient.subscribe("/topic/notifications", function (message) {
-            const notification = message.body;
-            const ul = document.getElementById("notifications");
-            const li = document.createElement("li");
-            li.textContent = notification;
-            ul.appendChild(li);
+    stompClient.connect({}, function (frame) {
+        console.log('Connected: ' + frame);
+        stompClient.subscribe('/topic/contacts', function (messageOutput) {
+            const contacts = JSON.parse(messageOutput.body);
+
+            const jsonDisplay = document.getElementById("json-display");
+            jsonDisplay.innerHTML = jsonDisplay.innerHTML + "\n" + JSON.stringify(contacts, null, 2);
         });
     });
 </script>
