--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 <pre id="json-display"></pre>
 
 <script>
-    const socket = new SockJS('/ws');
+    const socket = new SockJS('http://localhost:8090/ws');
     const stompClient = Stomp.over(socket);
 
     stompClient.connect({}, function (frame) {
