feat: html page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSocket Example</title>
+    <title>Meetime + Hubspot Integration</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
 </head>
 <body>
-<h1>Contatos Criados</h1>
+<h1>Meetime + Hubspot Integration</h1>
+<h2>Contatos Criados</h2>
 
 <h2>JSON Recebido:</h2>
 <pre id="json-display"></pre>
